@@ -3,6 +3,7 @@ Revision history for CGI-Info
 0.104
 	Bumped minimum version of Config::Abstraction - and hence removed MD5_CTX workaround code
 	Flag Alibaba as a search engine
+	Use Object::Configure instead of Class::Debug
 
 0.103	Fri May 16 17:48:32 EDT 2025
 	Mark Clickagy as a bot
